--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -4,6 +4,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     <title>STOCKEPIPHANY</title>
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
