--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -35,7 +35,7 @@
         <div class="autocom-box">
           
         </div>
-        <input type="submit" class="icon">
+        <div class="icon"></div>
       </div>
     </form>
       <div class="list">
