--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -35,7 +35,7 @@
         <div class="autocom-box">
           
         </div>
-        <div class="icon"></div>
+        <input type="submit" class="icon">
       </div>
     </form>
       <div class="list">
@@ -45,8 +45,8 @@
         <li>Stock Price: {{price}}</li>
         <li>Stock Price Change: {{change}}</li>
         <li>Change Percentage: {{change_percentage}} </li>
-        <li>Market Status: {{market_status}}</li>
-        <li>Opening Time: {{opening_time}} </li>
+        <li>Opening Time: {{market_status}}</li>
+        <li>Market Status: {{opening_time}} </li>
      </div>
     </div>
     </div>
