--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -47,6 +47,7 @@
         <li>Change Percentage: {{change_percentage}} </li>
         <li>Opening Time: {{market_status}}</li>
         <li>Market Status: {{opening_time}} </li>
+        <li>Market Status: {{stonkin}} </li>
      </div>
     </div>
     </div>
